add categories table
